# fold_transformer

./: .gitignore  README.md  pyproject.toml  run_cli.py
.github/workflows/: release.yml
src/: groupers.py  main.py  mappers.py  models.py  processor.py
src/fold_transformer/: filters.py  interfaces.py  io_ops.py  main.py  processor.py
tests/: test_processor.py
