[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fold_transformer"
version = "0.1.0"
description = "A CLI tool to transform Fold transaction data"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas",
    "pytz",
]

[project.optional-dependencies]
build = ["pyinstaller"]

[project.scripts]
fold-transformer = "fold_transformer.main:main"
